components/21-atoms/buttons/_buttons.scss
////
///
/// This file defines the bulk of all button styling.
///
/// @group buttons
/// @author Gert-Jan Meire
///
////

///
/// Button - small variant.
///
/// @since 3.0.0
/// @group buttons
/// @access public
/// @author Gert-Jan Meire
///
@mixin button-small {
  height: 1.9rem;
  padding: .6rem 1.3rem;
  font-size: .6rem;
}

///
/// Button - medium variant.
///
/// @since 3.0.0
/// @group buttons
/// @access public
/// @author Gert-Jan Meire
///
@mixin button-medium {
  height: 2.2rem;
  padding: .6rem 1.8rem;
  font-size: .7rem;
}

///
/// Button - large variant.
///
/// @since 3.0.0
/// @group buttons
/// @access public
/// @author Gert-Jan Meire
///
@mixin button-large {
  height: 2.5rem;
  padding: .7rem 2.2rem;
  font-size: .8rem;
}

///
/// Button - disabled variant.
///
/// @since 3.0.0
/// @group buttons
/// @access public
/// @author Gert-Jan Meire
/// @require color
///
@mixin button-disabled {
  [class*='cs--'] & {
    border: 0;
    background-color: color('white', 2);
    color: color('white');
    box-shadow: none;

    &:hover {
      background-color: color('white', 2);
      color: color('white');
      box-shadow: none;
      cursor: not-allowed;
    }
  }
}

///
/// General button styling.
///
/// @since 3.0.0
/// @group buttons
/// @access public
/// @author Gert-Jan Meire
///
@mixin button {
  @include button-medium; // Default.

  border: 2px solid;
  border-radius: border-radius('radius-1');
  outline: 0;
  font-family: $default-font-family;
  font-weight: 600;
  line-height: normal;
  text-align: center;
  cursor: pointer;

  &:disabled {
    @include button-disabled;
  }

  &.button-block {
    @include button-block;
  }

  &.button-small {
    @include button-small;
  }

  &.button-medium {
    @include button-medium;
  }

  &.button-large {
    @include button-large;
  }

  &.button-icon {
    padding-right: .4rem;
    padding-left: .4rem;
    text-align: left;

    i {
      margin-left: 1.2rem;
    }
  }
}

///
/// Makes a button display block instead of inline.
///
/// @since 3.0.0
/// @group buttons
/// @access public
/// @author Gert-Jan Meire
///
@mixin button-block {
  display: block;
  width: 100%;
}

///
/// Make a button display: inline-block.
///
/// @since 3.0.0
/// @group buttons
/// @access public
/// @author Gert-Jan Meire
///
@mixin button-inlineblock {
  display: inline-block;
  width: auto;
}

.button,
input[type="button"],
input[type="submit"] {
  @include button;
}

